--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
   
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script>
   <script src='assets/js/vendor/bootstrap.js' defer></script> -->
-  <script src='dist/main.bundle.js'></script>
+  <script src='dist/events.bundle.js'></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
