--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script>
   <script src='assets/js/vendor/bootstrap.js' defer></script> -->
-  <script src='dist/main.bundle.js'></script>
+  <script src='dist/app.bundle.js'></script>
 
 </head>
 <body>
