--- a/schedule.html
+++ b/schedule.html
@@ -12,7 +12,7 @@
 
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script>
   <script src='assets/js/vendor/bootstrap.js' defer></script> -->
-  <script src='dist/main.bundle.js'></script>
+  <script src='dist/schedule.bundle.js'></script>
 </head>
 
 <body class="schedule-bg">
