--- a/tickets.html
+++ b/tickets.html
@@ -12,7 +12,7 @@
 
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script>
   <script src='assets/js/vendor/bootstrap.js' defer></script> -->
-  <script src='dist/main.bundle.js'></script>
+  <script src='dist/tickets.bundle.js'></script>
 </head>
 <body class="tickets-bg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
